--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header class="header">
         <nav class="navigation container">
             <img src="./img/mainLogo.png" alt="mainLogo">
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Services</a>
-            <a href="#">Features</a>
-            <a href="#">Team</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <div><a href="#">Home</a></div>
+            <div><a href="#">About Us</a></div>
+            <div><a href="#">Services</a></div>
+            <div><a href="#">Features</a></div>
+            <div><a href="#">Team</a></div>
+            <div><a href="#">Blog</a></div>
+            <div><a href="#">Contact</a></div>
         </nav>
     </header>
     <main class="main">
