--- a/index.html
+++ b/index.html
@@ -41,5 +41,55 @@
             <a href="#"><img src="./img/logo5.png" alt="Logo"></a>
         </nav>
     </footer>
+    <main>
+        <section class = "cardList container">
+                <div class = "card1">
+                    <img src="./img/icon1.png" alt="icon">
+                    <h2>Grow Your Business</h2>
+                    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                    <button>Read More...</button>
+                </div>
+                <div class = "card1 card1Big">
+                    <img src="./img/icon2.png" alt="icon">
+                    <h2>Get Quality leads</h2>
+                    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                    <button>Read More...</button>
+                </div>
+                <div class = "card1">
+                    <img src="./img/icon3.png" alt="icon">
+                    <h2>Drive More Sales</h2>
+                    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+                    <button>Read More...</button>
+                </div>
+        </section>
+    </main>
+    <main>
+        <section class="textCardChoose container">
+            <div class="mainText">
+                <h2>Why You Should Choose Us.</h2>
+                <p>Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.</p>
+            </div>
+        </section>
+        <section class="cardChoose container">
+            <div class = "card2">
+                <img src="./img/photo1.png" alt="img">
+                <h2>Keyword Research</h2>
+                <p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button>Learn More></button>
+            </div>
+            <div class = "card2 card2Big">
+                <img src="./img/photo2.png" alt="img">
+                <h2>Seo Optimazadion</h2>
+                <p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button>Learn More></button>
+            </div>
+            <div class = "card2">
+                <img src="./img/photo3.png" alt="img">
+                <h2>Social Marketing</h2>
+                <p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                <button>Learn More></button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
